static/stylesheets/style.scss
/* fonts */
@font-face { font-family: 'Bree'; src: url('/static/fonts/BreeSerif_Reg.otf'); }

$red: #a9071e;
$green: #a0d36e;
$blue: #aad1d8;
$yellow: #facb47;
$dark-blue: #5b8b94;

body{
  margin: 0;
  padding: 0;
  background-image: url('/static/images/satinweave.png');
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  line-height: 1.4;
}

#top-bar{
  /*background-color: white;*/
  /*box-shadow: 0 2px 2px #888;*/
  /*margin-bottom: 20px;*/
  padding-bottom: 1px;
  h1{
    font-family: Bree, serif;
    /*color: $dark-blue;
    color: #888;
    margin-top: 2px; */
    color: $dark-blue;
    font-size: 45px;
    text-shadow: 0 0 2em #fff ;
  }
  #logo{
    margin: 15px auto;
    width: 400px;
    text-align: center;
  }
  #color-top{
    background-image: url('/static/images/rainbow.png');
    height: 3px;
    width: 100%;
  }
}

.paste-input {
  #input {
    font-size: 12px;
    padding: 5px;
    border-radius: 3px;
  }
}

ul#pastes {
  margin: 0;
  margin-top: 30px;
  padding: 0;
  li.paste {
    margin-bottom: 20px;
    border: 1px solid #dddddd;
    background: white;
    box-shadow: 0 2px 2px #888;
    list-style: none;

    .color-top{
      background-image: url('/static/images/rainbow.png');
      height: 3px;
      width: 100%;
    }

    .paste-content{
      margin: 30px;
      word-wrap: break-word;
    }

  }
  li.paste:hover {
    background: #faf6ea;
  }
}

/* Desktop */
@media (min-width : 960px) {
  #wrapper {
    width: 85%;
    max-width: 960px;
    margin: 0 auto;
    .paste-input{
      margin: 0 auto;
      width: 100%;
      .form-line {
          overflow: hidden;
      }
      .form-line #input {
          width: 100%;
          float:left;
      }
      .form-line span {
          display: block;
          overflow: hidden;
          padding: 0 5px
      }
      .form-line .cupid-green {
          float: right
      }
      .form-line #input, .formLine .cupid-green {
        -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
        box-sizing: border-box
      }
    }
  }
}

  /* Tablet */
  @media (min-width: 481px) and (max-width: 959px){
    #wrapper {
      width: 95%;
      margin: 0 auto;
      #input {
        width: 60%;
        margin: 0 auto;
      }
    }
  }

  /* Phones */
  @media (max-width: 480px)
  {
    #wrapeper {
      width: 100%;
      margin: 0 auto;
    }
  }

  /* cupid green (inspired by okcupid.com)
  *******************************************************************************/
  input.cupid-green {
    background-color: $green;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $green), color-stop(100%, #63a62f));
    background-image: -webkit-linear-gradient(top, $green, #63a62f);
    background-image: -moz-linear-gradient(top, $green, #63a62f);
    background-image: -ms-linear-gradient(top, $green, #63a62f);
    background-image: -o-linear-gradient(top, $green, #63a62f);
    background-image: linear-gradient(top, $green, #63a62f);
    border: 1px solid #63a62f;
    border-bottom: 1px solid #5b992b;
    border-radius: 3px;
    -webkit-box-shadow: inset 0 1px 0 0 #96ca6d;
    box-shadow: inset 0 1px 0 0 #96ca6d;
    color: #fff;
    font: bold 11px/1 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
    padding: 7px 0 8px 0;
    text-align: center;
    text-shadow: 0 -1px 0 #4c9021;
    width: 150px; }
    input.cupid-green:hover {
      background-color: #76b347;
      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #76b347), color-stop(100%, #5e9e2e));
      background-image: -webkit-linear-gradient(top, #76b347, #5e9e2e);
      background-image: -moz-linear-gradient(top, #76b347, #5e9e2e);
      background-image: -ms-linear-gradient(top, #76b347, #5e9e2e);
      background-image: -o-linear-gradient(top, #76b347, #5e9e2e);
      background-image: linear-gradient(top, #76b347, #5e9e2e);
      -webkit-box-shadow: inset 0 1px 0 0 #8dbf67;
      box-shadow: inset 0 1px 0 0 #8dbf67;
      cursor: pointer; }
    input.cupid-green:active {
      border: 1px solid #5b992b;
      border-bottom: 1px solid #538c27;
      -webkit-box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee;
      box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee; }

